Version 2.7.12 (?, revision ?):

* Moved to GitHub

* Updated to Boost 1.69.0 and MSVC 14.1 (Visual Studio 2017, 15.9.7)

* Updated C++ code to use Boost.FileSystem and the Win32 wide character (UTF-16) API

* Numerous updates to C++ code to modernize towards C++14

* Fixed a rule engine bug, in which trigger lists were updated from within a loop over
  those lists' contents

* Fixed a rule engine bug that caused a runaway recursion in rare circumstances

* Merged into the trunk the SWRL rules engine created by Carl Andersen and Doug Reid

* Removed the old-style binary zip file from the build infrastructure and documentation,
  and renamed the "quick start" binaries to indicate their status as the new standard.
  Also added javadoc and source distribution files.

* Fixed a bug that prevented the Admin web page from showing running queries due to a
  JSON parse error

* Added the script 'InstallService.sh' for Linux builds.  On systemd-based Linux
  distributions (including CentOS and Ubuntu), this will install Parliament as a daemon
  (a.k.a. service).  This means that Parliament will shut down properly when the machine
  shuts down (or when the daemon controller shuts it down).  This could be extended to
  other variants of Linux and to UNIX, but this is a good start that will cover our most
  important use cases.

* Added two configuration properties to ParliamentConfig.txt to cause long-running
  queries to time out

* Fixed a few bugs in the temporal index implementation and unit tests

* Fixed a bug that increased the likelihood that an ungraceful shutdown would corrupt
  the data files

* Changed the default KB directory from "." (the current working directory) to "kb-data"

* Added configuration settings that enable linear growth of Parliament's resource and
  statement tables.  The old behavior (geometric growth) is still available, but
  disabled by default.



=================================================

Version 2.7.11 (7/17/2017, revision 751):
