@@ -23,7 +23,7 @@
 		<echo message="Using JDK ${ant.java.version}"/>
 
 		<delete dir="${targetDir}" deleteonexit="true"/>
-		<delete file="${basedir}/Parliament/Test/ParliamentConfig.txt"/>
+		<delete file="${basedir}/Parliament/Test/ParliamentKbConfig.txt"/>
 		<delete file="${basedir}/Parliament/Test/ParliamentLogConfig.txt"/>
 		<delete dir="${basedir}/Parliament/Test/kb-data"/>
 		<delete dir="${basedir}/indexes"/>
