@@ -2,6 +2,12 @@ Version 2.7.12 (?, revision ?):
 
 * Moved to GitHub
 
+* Refactored ParliamentConfig.txt into two configuration files, ParliamentKbConfig.txt
+  and ParliamentLogConfig.txt.  The latter configures Parliament's native code logging,
+  and the latter configures everything else.  (The reason: Logging is configured at
+  static initialization time, but the ParliamentConfig.txt file was not specified until
+  later, causing some very messy code.)
+
 * Updated to Boost 1.69.0 and MSVC 14.1 (Visual Studio 2017, 15.9.7)
 
 * Updated C++ code to use Boost.FileSystem and the Win32 wide character (UTF-16) API
@@ -29,7 +35,7 @@ Version 2.7.12 (?, revision ?):
   other variants of Linux and to UNIX, but this is a good start that will cover our most
   important use cases.
 
-* Added two configuration properties to ParliamentConfig.txt to cause long-running
+* Added two configuration properties to ParliamentKbConfig.txt to cause long-running
   queries to time out
 
 * Fixed a few bugs in the temporal index implementation and unit tests
